Halft modal repeat

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <!--Header-->
-      <div class="conteiner heder-content">
+      <div class="conteiner header-content">
         <a href="./index.html" class="link-logotipe link"
           ><span class="part-logotipe">Web</span>Studio</a
         >
