--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header portfolio">
       <!--Header-->
-      <div class="conteiner heder-content">
+      <div class="conteiner header-content">
         <a href="./index.html" class="link-logotipe link"><span class="part-logotipe">Web</span>Studio</a>
         <nav class="navigation">
           <ul class="header-list list">
