--- a/index.html
+++ b/index.html
@@ -372,10 +372,11 @@
         <form action="#" class="mailing-btn">
           <h2 class="footer-list-title">Подпишитесь на рассылку</h2>
           <textarea name="mailing-mesage" class="mailing-mesage" placeholder="E-mail"></textarea>
-          <button type="submit" class="hero-btn position-footer-btn"><span class="text-btn">Подписаться</span>
-            <svg class="icon-footer-btn">
+          <button type="submit" class="hero-btn position-footer-btn"><span class="text-btn portfolio-action">Подписаться</span>
+            <!-- <svg class="icon-footer-btn">
               <use href="./svg/sprite.svg#icon-leter-footer"></use>
-            </svg></button>
+            </svg> -->
+          </button>
         </form>
       </div>
     </footer>
