--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,13 @@
           <li class="address-list-item">
             <a href="mailto:info@devstudio.com" class="connect-header link"><svg class="icon-address-list" width="16"
                 height="12">
-                <use href="./svg/sprite.svg#icon-list"></use>
+                <use href="./image/svg/sprite.svg#icon-list"></use>
               </svg> info@devstudio.com</a>
           </li>
           <li class="address-list-item">
             <a href="tel:+380961111111" class="connect-header link"><svg class="icon-address-list" width="10"
                 height="16">
-                <use href="./svg/sprite.svg#icon-smartphone"></use>
+                <use href="./image/svg/sprite.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11</a>
           </li>
         </ul>
@@ -226,22 +226,22 @@
         <ul class="footer-social-list list">
           <li class="footer-social-list-item">
             <a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                <use href="./svg/sprite.svg#icon-instagram"></use>
+                <use href="./image/svg/sprite.svg#icon-instagram"></use>
               </svg></a>
           </li>
           <li class="footer-social-list-item">
             <a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                <use href="./svg/sprite.svg#icon-twitter"></use>
+                <use href="./image/svg/sprite.svg#icon-twitter"></use>
               </svg></a>
           </li>
           <li class="footer-social-list-item">
             <a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                <use href="./svg/sprite.svg#icon-facebook"></use>
+                <use href="./image/svg/sprite.svg#icon-facebook"></use>
               </svg></a>
           </li>
           <li class="footer-social-list-item">
             <a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                <use href="./svg/sprite.svg#icon-linkedin"></use>
+                <use href="./image/svg/sprite.svg#icon-linkedin"></use>
               </svg></a>
           </li>
         </ul>
@@ -249,12 +249,12 @@
       <form action="#" class="mailing-btn">
         <h2 class="footer-list-title">Подпишитесь на рассылку</h2>
         <textarea name="mailing-mesage" class="mailing-mesage" placeholder="E-mail"></textarea>
-        <button type="submit" class="hero-btnf position-footer-btn">
-          <span class="text-btnf">Подписаться</span>
-          <svg class="icon-footer-btn">
-            <use href="./svg/sprite.svg#icon-leter-footer"></use>
-          </svg>
-        </button>
+        <div class="container-btn-footer"><button type="submit" class="hero-btnf"><span
+              class="text-btnf">Подписаться</span>
+            <svg class="icon-footer-btn">
+              <use href="./image/svg/sprite.svg#icon-leter-footer"></use>
+            </svg>
+          </button></div>
       </form>
     </div>
   </footer>
