--- a/portfolio.html
+++ b/portfolio.html
@@ -247,9 +247,11 @@
         </ul>
       </div>
       <form action="#" class="mailing-btn">
-        <h2 class="footer-list-title">Подпишитесь на рассылку</h2>
-        <textarea name="mailing-mesage" class="mailing-mesage" placeholder="E-mail"></textarea>
-        <div class="container-btn-footer"><button type="submit" class="hero-btnf"><span
+        <div>
+          <h2 class="footer-list-title">Подпишитесь на рассылку</h2>
+          <textarea name="mailing-mesage" class="mailing-mesage" placeholder="E-mail"></textarea>
+        </div>
+        <div class="container-btn-footer"><button type="submit" class="hero-btnf position-footer-btn"><span
               class="text-btnf">Подписаться</span>
             <svg class="icon-footer-btn">
               <use href="./image/svg/sprite.svg#icon-leter-footer"></use>
