--- a/index.html
+++ b/index.html
@@ -317,9 +317,11 @@
         </ul>
       </div>
       <form action="#" class="mailing-btn">
-        <h2 class="footer-list-title">Подпишитесь на рассылку</h2>
-        <textarea name="mailing-mesage" class="mailing-mesage" placeholder="E-mail"></textarea>
-        <div class="container-btn-footer"><button type="submit" class="hero-btn"><span
+        <div>
+          <h2 class="footer-list-title">Подпишитесь на рассылку</h2>
+          <textarea name="mailing-mesage" class="mailing-mesage" placeholder="E-mail"></textarea>
+        </div>
+        <div class="container-btn-footer"><button type="submit" class="hero-btn position-footer-btn"><span
               class="text-btn">Подписаться</span>
             <svg class="icon-footer-btn">
               <use href="./image/svg/sprite.svg#icon-leter-footer"></use>
@@ -328,6 +330,7 @@
       </form>
     </div>
   </footer>
+  <!--Backdrop-->
   <div class="backdrop is-hidden" data-modal>
     <div class="backdrop-conteiner">
       <form action="#" class="modal">
