--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <main>
     <!--Hero-->
     <section class="hero-section">
-      <div class="conteiner">
+      <div class="conteiner hero-container">
         <div class="hero-block">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero-btn" data-modal-open>
@@ -332,7 +332,7 @@
   </footer>
   <!--Backdrop-->
   <div class="backdrop is-hidden" data-modal>
-    <div class="backdrop-conteiner">
+    <div class="backdrop-container">
       <form action="#" class="modal">
         <button type="button" class="btn-backdrop" data-modal-close><svg class="icon-backdrop">
             <use href="./image/svg/sprite.svg#icon-close"></use>
